--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,21 @@
-# List of dependencies
-flask
-flask-sqlalchemy
-mysqlclient
-mysql-connector-python
-python-dotenv
+blinker==1.9.0
+click==8.1.8
+exceptiongroup==1.2.2
+Flask==3.1.0
+Flask-SQLAlchemy==3.1.1
+importlib_metadata==8.6.1
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+mysql-connector-python==9.2.0
+mysqlclient==2.2.7
+packaging==24.2
+pluggy==1.5.0
+pytest==8.3.4
+python-dotenv==1.0.1
+SQLAlchemy==2.0.37
+tomli==2.2.1
+typing_extensions==4.12.2
+Werkzeug==3.1.3
+zipp==3.21.0
