--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 blinker==1.9.0
+cffi==1.17.1
 click==8.1.8
+cryptography==44.0.1
 exceptiongroup==1.2.2
 Flask==3.1.0
 Flask-SQLAlchemy==3.1.1
@@ -12,6 +14,8 @@ mysql-connector-python==9.2.0
 mysqlclient==2.2.7
 packaging==24.2
 pluggy==1.5.0
+pycparser==2.22
+PyMySQL==1.1.1
 pytest==8.3.4
 python-dotenv==1.0.1
 SQLAlchemy==2.0.37
