--- a/.github/workflows/webapp-ci.yml
+++ b/.github/workflows/webapp-ci.yml
@@ -1,31 +1,41 @@
-name: Web App CI
+name: Github action
 
 on:
   pull_request:
-    branches:
-      - main  # Runs on PRs to main branch
 
+env:
+  HOST: ${{ secrets.HOST }}
+  
 jobs:
-  run-tests:
-    name: Run Python Tests
+  test:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Configure MySQL
+      run: |
+        sudo service mysql start
+        sudo mysql -u root -p"${{ secrets.DB_PASS }}" -e "CREATE DATABASE IF NOT EXISTS ${{ secrets.DB_NAME }};"
+        sudo mysql -u root -p"${{ secrets.DB_PASS }}" -e "CREATE USER IF NOT EXISTS ${{ secrets.DB_USER }}@'localhost' IDENTIFIED BY '${{ secrets.DB_PASS }}';"
+        sudo mysql -u root -p"${{ secrets.DB_PASS }}" -e "GRANT ALL PRIVILEGES ON ${{ secrets.DB_NAME }}.* TO ${{ secrets.DB_USER }}@'localhost';"
+        sudo mysql -u root -p"${{ secrets.DBPASS }}" -e "FLUSH PRIVILEGES;"
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.x
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.12"
-
-      - name: Install dependencies
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-          pip install -r requirements.txt
-
-      - name: Run Tests
-        run: |
-          source venv/bin/activate
-          pytest tests/
+    - name: Create virtual environment
+      run: |
+        python -m venv venv
+        source venv/bin/activate
+        
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest requests 
+      
+    - name: Wait and Run Integration Test
+      run: |
+        sleep 15
+        pytest tests/test-api.py
