--- a/.github/workflows/webapp-ci.yml
+++ b/.github/workflows/webapp-ci.yml
@@ -4,7 +4,10 @@ on:
   pull_request:
 
 env:
-  HOST: ${{ secrets.HOST }}
+  DB_HOST: ${{ secrets.DB_HOST }}
+  DB_NAME: ${{ secrets.DB_NAME }}
+  DB_USER: ${{ secrets.DB_USER }}
+  DB_PASS: ${{ secrets.DB_PASS }}
 
 jobs:
   test:
@@ -24,15 +27,15 @@ jobs:
           echo "MySQL root access confirmed without a password."
         else
           echo "Setting MySQL root password..."
-          sudo mysqladmin -u root password "${{ secrets.DB_PASS }}"
+          sudo mysqladmin -u root password "$DB_PASS"
         fi
 
     - name: Configure MySQL Database and User
       run: |
-        sudo mysql -u root -p"${{ secrets.DB_PASS }}" -e "CREATE DATABASE IF NOT EXISTS ${{ secrets.DB_NAME }};"
-        sudo mysql -u root -p"${{ secrets.DB_PASS }}" -e "CREATE USER IF NOT EXISTS '${{ secrets.DB_USER }}'@'localhost' IDENTIFIED BY '${{ secrets.DB_PASS }}';"
-        sudo mysql -u root -p"${{ secrets.DB_PASS }}" -e "GRANT ALL PRIVILEGES ON ${{ secrets.DB_NAME }}.* TO '${{ secrets.DB_USER }}'@'localhost';"
-        sudo mysql -u root -p"${{ secrets.DB_PASS }}" -e "FLUSH PRIVILEGES;"
+        sudo mysql -u root -p"$DB_PASS" -e "CREATE DATABASE IF NOT EXISTS $DB_NAME;"
+        sudo mysql -u root -p"$DB_PASS" -e "CREATE USER IF NOT EXISTS '$DB_USER'@'$DB_HOST' IDENTIFIED BY '$DB_PASS';"
+        sudo mysql -u root -p"$DB_PASS" -e "GRANT ALL PRIVILEGES ON $DB_NAME.* TO '$DB_USER'@'$DB_HOST';"
+        sudo mysql -u root -p"$DB_PASS" -e "FLUSH PRIVILEGES;"
 
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -47,7 +50,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest requests
+        pip install pytest requests 
       
     - name: Wait and Run Integration Test
       run: |
