--- a/.github/workflows/webapp-ci.yml
+++ b/.github/workflows/webapp-ci.yml
@@ -1,57 +1,67 @@
-name: Github action
+name: Web App CI
 
 on:
   pull_request:
-
-env:
-  DB_HOST: ${{ secrets.DB_HOST }}
-  DB_NAME: ${{ secrets.DB_NAME }}
-  DB_USER: ${{ secrets.DB_USER }}
-  DB_PASS: ${{ secrets.DB_PASS }}
+    branches:
+      - main  # Runs on PRs to main branch
 
 jobs:
-  test:
+  run-tests:
+    name: Run Python Tests
     runs-on: ubuntu-latest
-    
+
+    services:
+      mysql:
+        image: mysql:8
+        env:
+          MYSQL_ROOT_PASSWORD: ${{ secrets.DB_PASS }}
+          MYSQL_DATABASE: ${{ secrets.DB_NAME }}
+          MYSQL_USER: ${{ secrets.DB_USER }}
+          MYSQL_PASSWORD: ${{ secrets.DB_PASS }}
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping -h 127.0.0.1 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASS }}" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      
-    - name: Check Secrets Availability
-      run: |
-        echo "DB_HOST: $DB_HOST"
-        echo "DB_NAME: $DB_NAME"
-        echo "DB_USER: $DB_USER"
-        echo "DB_PASS: [HIDDEN]"
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Start MySQL and Configure Root Password
-      run: |
-        sudo service mysql start
-        sleep 10
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
 
-    - name: Configure MySQL Database and User
-      run: |
-        sudo mysql -u root -p"$DB_PASS" -e "CREATE DATABASE IF NOT EXISTS $DB_NAME;"
-        sudo mysql -u root -p"$DB_PASS" -e "CREATE USER IF NOT EXISTS '$DB_USER'@'$DB_HOST' IDENTIFIED BY '$DB_PASS';"
-        sudo mysql -u root -p"$DB_PASS" -e "GRANT ALL PRIVILEGES ON $DB_NAME.* TO '$DB_USER'@'$DB_HOST';"
-        sudo mysql -u root -p"$DB_PASS" -e "FLUSH PRIVILEGES;"
+      - name: Install dependencies
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+          pip install -r requirements.txt
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.x
+      - name: Wait for MySQL to be ready
+        run: |
+          echo "Waiting for MySQL to be ready..."
+          sleep 30  # Adjust wait time if needed
 
-    - name: Create virtual environment
-      run: |
-        python -m venv venv
-        source venv/bin/activate
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytest requests 
-      
-    - name: Wait and Run Integration Test
-      run: |
-        sleep 15
-        pytest tests/test-api.py
+      - name: Fix MySQL Authentication Method
+        run: |
+          sudo systemctl start mysql || echo "MySQL service not needed in containerized environment"
+          echo "ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '${DB_PASS}'; FLUSH PRIVILEGES;" | mysql -u root -p"${DB_PASS}"
+        env:
+          DB_PASS: ${{ secrets.DB_PASS }}
+
+      - name: Configure MySQL Database and User
+        run: |
+          echo "Creating database and user..."
+          mysql -u root -p"${DB_PASS}" -e "CREATE DATABASE IF NOT EXISTS ${DB_NAME};"
+          mysql -u root -p"${DB_PASS}" -e "CREATE USER IF NOT EXISTS '${DB_USER}'@'%' IDENTIFIED BY '${DB_PASS}';"
+          mysql -u root -p"${DB_PASS}" -e "GRANT ALL PRIVILEGES ON ${DB_NAME}.* TO '${DB_USER}'@'%';"
+          mysql -u root -p"${DB_PASS}" -e "FLUSH PRIVILEGES;"
+        env:
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASS: ${{ secrets.DB_PASS }}
+
+      - name: Run Tests
+        run: |
+          source venv/bin/activate
+          pytest tests/
