--- a/.github/workflows/webapp-ci.yml
+++ b/.github/workflows/webapp-ci.yml
@@ -14,13 +14,17 @@ jobs:
       mysql:
         image: mysql:8
         env:
-          MYSQL_ROOT_PASSWORD: ${{ secrets.DB_PASS }}
-          MYSQL_DATABASE: ${{ secrets.DB_NAME }}
-          MYSQL_USER: ${{ secrets.DB_USER }}
-          MYSQL_PASSWORD: ${{ secrets.DB_PASS }}
+          MYSQL_ROOT_PASSWORD: rootpassword  # Hardcoded since secrets are NOT supported in services
+          MYSQL_DATABASE: testdb
+          MYSQL_USER: testuser
+          MYSQL_PASSWORD: testpassword
         ports:
           - 3306:3306
-        options: --health-cmd="mysqladmin ping -h 127.0.0.1 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASS }}" --health-interval=10s --health-timeout=5s --health-retries=3
+        options: >-
+          --health-cmd="mysqladmin ping -h 127.0.0.1 -uroot -prootpassword"
+          --health-interval=10s 
+          --health-timeout=5s 
+          --health-retries=3
 
     steps:
       - name: Checkout Repository
@@ -42,20 +46,13 @@ jobs:
           echo "Waiting for MySQL to be ready..."
           sleep 30  # Adjust wait time if needed
 
-      - name: Fix MySQL Authentication Method
-        run: |
-          sudo systemctl start mysql || echo "MySQL service not needed in containerized environment"
-          echo "ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '${DB_PASS}'; FLUSH PRIVILEGES;" | mysql -u root -p"${DB_PASS}"
-        env:
-          DB_PASS: ${{ secrets.DB_PASS }}
-
       - name: Configure MySQL Database and User
         run: |
-          echo "Creating database and user..."
-          mysql -u root -p"${DB_PASS}" -e "CREATE DATABASE IF NOT EXISTS ${DB_NAME};"
-          mysql -u root -p"${DB_PASS}" -e "CREATE USER IF NOT EXISTS '${DB_USER}'@'%' IDENTIFIED BY '${DB_PASS}';"
-          mysql -u root -p"${DB_PASS}" -e "GRANT ALL PRIVILEGES ON ${DB_NAME}.* TO '${DB_USER}'@'%';"
-          mysql -u root -p"${DB_PASS}" -e "FLUSH PRIVILEGES;"
+          echo "Setting up MySQL database and user..."
+          mysql -h 127.0.0.1 -uroot -prootpassword -e "CREATE DATABASE IF NOT EXISTS $DB_NAME;"
+          mysql -h 127.0.0.1 -uroot -prootpassword -e "CREATE USER IF NOT EXISTS '$DB_USER'@'%' IDENTIFIED BY '$DB_PASS';"
+          mysql -h 127.0.0.1 -uroot -prootpassword -e "GRANT ALL PRIVILEGES ON $DB_NAME.* TO '$DB_USER'@'%';"
+          mysql -h 127.0.0.1 -uroot -prootpassword -e "FLUSH PRIVILEGES;"
         env:
           DB_NAME: ${{ secrets.DB_NAME }}
           DB_USER: ${{ secrets.DB_USER }}
