packer yml updated

--- a/.github/workflows/packer-ci.yml
+++ b/.github/workflows/packer-ci.yml
@@ -23,4 +23,4 @@ jobs:
 
       - name: Validate Packer template
         run: |
-          packer validate . || (echo "Packer validation failed. Fix errors before merging." && exit 1)
+          packer validate packer/ubuntu_webapp.pkr.hcl || (echo "Packer validation failed. Fix errors before merging." && exit 1)
