yml errors resolved

--- a/.github/workflows/packer-ci.yml
+++ b/.github/workflows/packer-ci.yml
@@ -17,6 +17,25 @@ jobs:
       - name: Install Packer
         uses: hashicorp/setup-packer@main
 
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y zip
+
+      - name: Build Webapp artifact
+        run: |
+          zip -r Webapp.zip ./
+
+      - name: Create .env file from GitHub Secrets
+        run: |
+          echo "DB_USER=${{ secrets.DB_USER }}" >> packer/.env
+          echo "DB_PASS=${{ secrets.DB_PASS }}" >> packer/.env
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> packer/.env
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> packer/.env
+          echo "APP_USER=${{ secrets.APP_USER }}" >> packer/.env
+          echo "APP_GROUP=${{ secrets.APP_GROUP }}" >> packer/.env
+          echo "APP_DIR=${{ secrets.APP_DIR }}" >> packer/.env
+
       - name: Initialize Packer (Install Plugins)
         run: |
           cd packer
@@ -28,4 +47,4 @@ jobs:
 
       - name: Validate Packer template
         run: |
-          packer validate packer/ubuntu_webapp.pkr.hcl || (echo "Packer validation failed. Fix errors before merging." && exit 1)
+          packer validate ubuntu_webapp.pkr.hcl || (echo "Packer validation failed. Fix errors before merging." && exit 1)
