--- a/.github/workflows/packer-build-ci.yml
+++ b/.github/workflows/packer-build-ci.yml
@@ -44,13 +44,7 @@ jobs:
           aws configure set region us-east-1
 
       # 🔹 Authenticate GCP CLI using Service Account Key
-      - name: Authenticate GCP CLI
-        run: |
-          echo "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}" | base64 --decode > gcp-key.json
-          gcloud auth activate-service-account --key-file=gcp-key.json
-          gcloud config set project "${{ secrets.GCP_PROJECT_ID }}"
-
-      - name: Authenticate with Google Cloud
+      - name: Authenticate to GCP CLI
         uses: google-github-actions/auth@v2
         with:
           credentials_json: "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}"
