--- a/.github/workflows/packer-build-ci.yml
+++ b/.github/workflows/packer-build-ci.yml
@@ -72,4 +72,4 @@ jobs:
           packer build \
             -var "aws_region=us-east-1" \
             -var "gcp_project_id=${{ secrets.GCP_PROJECT_ID }}" \
-            packer/ubuntu_webapp.pkr.hcl
+            ubuntu_webapp.pkr.hcl
