--- a/.github/workflows/packer-build-ci.yml
+++ b/.github/workflows/packer-build-ci.yml
@@ -67,6 +67,17 @@ jobs:
         run: |
           packer init ubuntu_webapp.pkr.hcl
 
+      - name: Create .env File
+        run: |
+          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
+          echo "DB_PASS=${{ secrets.DB_PASS }}" >> .env
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
+          echo "APP_USER=${{ secrets.APP_USER }}" >> .env
+          echo "APP_GROUP=${{ secrets.APP_GROUP }}" >> .env
+          echo "APP_DIR=${{ secrets.APP_DIR }}" >> .env
+          echo ".env file created successfully!"
+
       - name: Build Packer Image for AWS and GCP
         run: |
           packer build \
