--- a/.github/workflows/packer-build-ci.yml
+++ b/.github/workflows/packer-build-ci.yml
@@ -1,7 +1,7 @@
 name: Packer Build
 
 on:
-  push:
+  pull:
     branches:
       - main  # Runs only when changes are merged to the main branch
 
@@ -37,11 +37,23 @@ jobs:
           sudo apt-get install -y google-cloud-cli
 
       # 🔹 AWS Authentication (Static Credentials)
-      - name: Authenticate AWS CLI
+#      - name: Authenticate AWS CLI
+#        run: |
+#          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
+#          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+#          aws configure set region us-east-1
+
+      - name: Authenticate AWS CLI (via Environment Variables)
         run: |
-          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
-          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
-          aws configure set region us-east-1
+          echo "[default]" > ~/.aws/credentials
+          echo "aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
+          echo "aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
+          echo "region=us-east-1" >> ~/.aws/config
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: us-east-1
+
 
       # 🔹 Authenticate GCP CLI using Service Account Key
       - name: Authenticate to GCP CLI
