--- a/.github/workflows/packer-build-ci.yml
+++ b/.github/workflows/packer-build-ci.yml
@@ -80,7 +80,7 @@ jobs:
 
       - name: Build Packer Image for AWS and GCP
         run: |
-          packer build \
-            -var "aws_region=us-east-1" \
-            -var "gcp_project_id=${{ secrets.GCP_PROJECT_ID }}" \
-            ubuntu_webapp.pkr.hcl
+          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+          export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          export AWS_DEFAULT_REGION=us-east-1
+          packer build -var "aws_region=us-east-1" -var "gcp_project_id=${{ secrets.GCP_PROJECT_ID }}" .
