--- a/systemd_webapp.service
+++ b/systemd_webapp.service
@@ -3,17 +3,18 @@ Description=CSYE6225 Web App
 After=network.target
 
 [Service]
-User=ubuntu
-WorkingDirectory=/opt/csye6225/Webapp
-ExecStart=/opt/csye6225/Webapp/venv/bin/python /opt/csye6225/Webapp/run.py
+User=appuser
+Group=appgroup
+WorkingDirectory=/opt/csye6225/
+ExecStart=/opt/csye6225/venv/bin/python /opt/csye6225/run.py
 Restart=always
 RestartSec=5s
 StandardOutput=syslog
 StandardError=syslog
 SyslogIdentifier=csye6225-webapp
-Environment="PATH=/opt/csye6225/Webapp/venv/bin"
+Environment="PATH=/opt/csye6225/venv/bin"
 Environment="FLASK_ENV=production"  # Set this if using Flask
-EnvironmentFile=/opt/csye6225/Webapp/.env  # Use this if you store secrets in .env
+EnvironmentFile=/opt/csye6225/.env  # Use this if you store secrets in .env
 
 [Install]
 WantedBy=multi-user.target
