--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 blinker==1.9.0
+boto3==1.37.16
+botocore==1.37.16
 cffi==1.17.1
 click==8.1.8
 cryptography==44.0.1
@@ -9,6 +11,7 @@ importlib_metadata==8.6.1
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
+jmespath==1.0.1
 MarkupSafe==3.0.2
 mysql-connector-python==9.2.0
 mysqlclient==2.2.7
@@ -17,10 +20,15 @@ pluggy==1.5.0
 pycparser==2.22
 PyMySQL==1.1.1
 pytest==8.3.4
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-json-logger==3.3.0
+s3transfer==0.11.4
+six==1.17.0
 SQLAlchemy==2.0.37
+statsd==4.0.1
 tomli==2.2.1
 typing_extensions==4.12.2
+urllib3==1.26.20
 Werkzeug==3.1.3
 zipp==3.21.0
-boto3
