--- a/.github/workflows/packer-build-ci.yml
+++ b/.github/workflows/packer-build-ci.yml
@@ -129,3 +129,52 @@ jobs:
           # Verify snapshot sharing
           aws ec2 describe-snapshot-attribute --snapshot-id $SNAPSHOT_ID --attribute createVolumePermission
 
+      - name: AWS CLI to use demo account
+        run: |
+          aws configure set aws_access_key_id "${{ secrets.AWS_DEMO_ACCESS_KEY_ID }}"
+          aws configure set aws_secret_access_key "${{ secrets.AWS_DEMO_SECRET_ACCESS_KEY }}"
+          aws configure set region us-east-1
+
+      - name: Create new version of Launch Template and set as default
+        run: |
+          AMI_ID=$(aws ec2 describe-images --owners self --query "Images | sort_by(@, &CreationDate)[-1].ImageId" --output text)
+          LAUNCH_TEMPLATE_NAME="csye6225-launch-template"  # Replace with your actual LT name
+      
+          echo "Using AMI ID: $AMI_ID"
+      
+          NEW_VERSION=$(aws ec2 create-launch-template-version \
+            --launch-template-name $LAUNCH_TEMPLATE_NAME \
+            --version-description "CI Update with AMI $AMI_ID" \
+            --source-version 1 \
+            --launch-template-data "{\"ImageId\":\"$AMI_ID\"}" \
+            --query 'LaunchTemplateVersion.VersionNumber' \
+            --output text)
+      
+          echo "New Launch Template Version: $NEW_VERSION"
+      
+          aws ec2 modify-launch-template \
+            --launch-template-name $LAUNCH_TEMPLATE_NAME \
+            --default-version $NEW_VERSION
+
+      - name: Trigger Auto Scaling Group Instance Refresh
+        run: |
+          aws autoscaling start-instance-refresh \
+            --auto-scaling-group-name csye6225-asg \
+            --preferences '{"MinHealthyPercentage": 100, "InstanceWarmup": 300}'
+
+      - name: Wait for Instance Refresh Completion
+        run: |
+          echo "Waiting for instance refresh to complete..."
+          
+          while true; do
+            STATUS=$(aws autoscaling describe-instance-refreshes --auto-scaling-group-name csye6225-asg --query "InstanceRefreshes[0].Status" --output text)
+            echo "Current refresh status: $STATUS"
+            if [[ "$STATUS" == "Successful" ]]; then
+              echo "Instance refresh completed successfully!"
+              break
+            elif [[ "$STATUS" == "Failed" ]]; then
+              echo "Instance refresh failed!"
+              exit 1
+            fi
+            sleep 30
+          done
